# Chatty-data-generation

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md
.streamlit/: config.toml
scripts/: validate_quality.py
src/: app.py  config.py
src/generation/: __init__.py  engine.py  row_models.py
src/llm/: __init__.py  client.py
src/query/: __init__.py  guardrails.py  service.py
src/schema/: __init__.py  models.py  parser.py
src/storage/: __init__.py  db.py  writer.py
tests/: conftest.py  test_generation.py  test_guardrails.py  test_parser.py  test_query.py
